Fixed issue: busting out of elements on mobile

--- a/taylor/style.css
+++ b/taylor/style.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    padding: 0;
     height: 100%;
     width: 100%;
     font-family: 'Lato', 'Helvetica', 'Arial', sans-serif;
@@ -38,6 +39,7 @@ ul {
     width: 100%;
     height: 100%;
     position: absolute;
+    left: 0; right: 0; top: 0; bottom: 0;
     background: url(img/gradient.png) center no-repeat;
     background-size: cover;
 }
@@ -84,10 +86,17 @@ ul {
     margin-right: 32px;
 }
 @media only screen and (max-width: 500px) {
+    #intro {
+        top: 35%;
+    }
+    h1 {
+        font-size: 32px;
+    }
     nav {
         position: relative;
         top: 15px;
         left: 60px;
+        width: 100px;
     }
     .el {
         float: none;
